--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ body{
 }
 #submit{
     background-color: black;
-    padding: 5px 10px;
+    padding: 8px 40px;
     cursor: pointer;
     color: aliceblue;
+    border-radius:10px;
 }
+
